syntax = "proto3";

package brewview.v1;

import "brewview/v1/client.proto";
import "buf/validate/validate.proto";

message ProductPricesListRequest {}
message ProductPricesListRow {
  int32 product_id = 1;
  string product_name = 2;
  string product_image = 3;
  float product_price = 4;
  int32 country_id = 5;
  int32 waste_ratio = 15;
  string country_name = 6;
  int32 unit_id = 7;
  string unit_name = 8;
  string created_at = 9;
  string closed_at = 10;
  string created_year = 11;
  string created_month = 12;
  string created_day = 13;
  string created_hour = 14;
}
message ProductPricesListResponse {
  ListDataOptions options = 1;
  repeated ProductPricesListRow records = 2;
  repeated ProductPricesListRow deleted_records = 3;
}
message ProductPriceCreateRequest {
  int32 product_id = 1 [(buf.validate.field).int32.gt = 0];
  int32 country_id = 2 [(buf.validate.field).int32.gt = 0];
  int32 unit_id = 3 [(buf.validate.field).int32.gt = 0];
  int32 waste_ratio = 7;
  float product_price = 4 [(buf.validate.field).float.gt = 0];
  float product_price_from = 5 [(buf.validate.field).float.gt = 0];
  float product_price_to = 6 [(buf.validate.field).float.gt = 0];
}
message ProductPriceCreateResponse {}

message ProductPriceFindForUpdateRequest {
  int32 product_id = 1 [(buf.validate.field).int32.gt = 0];
  int32 country_id = 2 [(buf.validate.field).int32.gt = 0];
  int32 waste_ratio = 4 [(buf.validate.field).int32.gt = 0];
  int32 unit_id = 3 [(buf.validate.field).int32.gt = 0];
}

message ProductPriceUpdateRequest {
  int32 product_id = 1 [(buf.validate.field).int32.gt = 0];
  int32 country_id = 2 [(buf.validate.field).int32.gt = 0];
  int32 waste_ratio = 7 [(buf.validate.field).int32.gt = 0];
  int32 unit_id = 3 [(buf.validate.field).int32.gt = 0];
  float product_price = 4 [(buf.validate.field).float.gt = 0];
  float product_price_from = 5 [(buf.validate.field).float.gt = 0];
  float product_price_to = 6 [(buf.validate.field).float.gt = 0];
}
message ProductPriceUpdateResponse {}

message ClientProductPrice {
  string product_name = 1;
  float product_price = 2;
  float previous_price = 3;
  float difference_amount = 4;
}

message ClientAllProduct {
  string product_name = 1;
  int32 product_id = 2;
  int32 country_id = 3;
  float product_price = 4;
}

message ClientInitialDataRequest {
  string day_date = 1;
}

message ClientInitialDataResponse {
  repeated ClientProductPrice top_5 = 1;
  repeated ClientProductPrice top_gainers = 2;
  repeated ClientProductPrice top_losers = 3;
  repeated ClientAllProduct all_products = 4;
}

message ProductPricesChartRequest {
  int32 product_id = 1;
  int32 country_id = 2;

  string date_period = 3;
}

message ProductPricesChartResponseRow {
  string date = 1;
  float price = 2;
}
message ProductPricesChartResponse {
  repeated ProductPricesChartResponseRow records = 1;
}
